<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HubActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="349dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:max="5"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="101dp"
        android:layout_height="32dp"
        android:layout_marginTop="56dp"
        android:text="@string/textview"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button7"
        android:layout_width="180dp"
        android:layout_height="58dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="124dp"
        android:text="@string/sava"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="228dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/can_yenileme_tu_u"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/heart_button_foreground" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="566dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/seviye_atlama_tu_u"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/levelup_button_foreground" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="391dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/kart_silme_tu_u"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/card_button_foreground" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="110dp"
        android:layout_height="54dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="124dp"
        android:text="@string/textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="185dp"
        android:layout_height="617dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="201dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview"
                android:textSize="25sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>