<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="320dp"
        android:layout_height="58dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="66dp"
        android:text="@string/main_title"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="195dp"
        android:layout_height="59dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="604dp"
        android:background="#633333"
        android:text="@string/main_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="199dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="280dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="361dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="442dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:layout_marginStart="277dp"
        android:layout_marginTop="199dp"
        android:text="@string/yetenek_duzenle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:layout_marginStart="277dp"
        android:layout_marginTop="280dp"
        android:text="@string/yetenek_duzenle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:layout_marginStart="277dp"
        android:layout_marginTop="361dp"
        android:text="@string/yetenek_duzenle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:layout_marginStart="277dp"
        android:layout_marginTop="442dp"
        android:text="@string/yetenek_duzenle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>